# nabil-app

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  cmake-format.yaml  flake.nix  main.cpp  vcpkg.json
NixModules/: opencascade.nix
src/: main.cpp
src/app/: Application.cpp  Application.h  MoveCommand.h  MoveTool.h  ViewportController.cpp  ViewportController.h
src/core/: ControlPoint.cpp  ControlPoint.h  HullModel.cpp  HullModel.h
src/render/: OcctViewport.cpp  OcctViewport.h  RenderController.cpp  RenderController.h  VisualPoint.cpp  VisualPoint.h  WireframeManager.cpp  WireframeManager.h  viewer.cpp  viewer.h  viewerInteractor.cpp
src/ui/: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  OcctWidget.cpp  OcctWidget.h  ViewportManager.cpp  ViewportManager.h  images.qrc  mainwindow.ui
src/ui/NABIL_layout1/: images.qrc  mainwindow.ui
